No need to instantiate a new Boolean object
git-svn-id: https://svn.apache.org/repos/asf/james/server/trunk@1083960 13f79535-47bb-0310-9956-ffa450edef68