@@ -156,7 +156,7 @@ public class NotifyPostmaster extends AbstractNotify {
         if (parameter == null) {
             return super.attachError();
         }        
-        return new Boolean(parameter).booleanValue();
+        return Boolean.valueOf(parameter);
     }
 
     /* ******************************************************************** */
